--- a/news.html
+++ b/news.html
@@ -66,7 +66,7 @@
           <div class="hero__image-2"></div>
           <div class="hero__spot-yellow"></div> -->
 
-          <h1 class="hero__title " style="color:#fff; padding-top: 350px; font-family: Arial, Helvetica, sans-serif;">Страница <br />в разработке!</h1>
+          <h1 style="color:#fff; padding-top: 350px; font-family: Arial, Helvetica, sans-serif; font-size: 34px; margin: 0 auto; text-align: center;">Страница <br />в разработке!</h1>
           <!-- <h2 class="hero__subtitle animate__animated animate__fadeInUp animate__slower">
             АНГЛИЙСКОМУ И <br />
             ФРАНЦУЗСКОМУ ЯЗЫКАМ
