--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <link rel="stylesheet" href="css/graph-modal.min.css" />
     <link rel="stylesheet" href="css/animate.min.css" />
     <link rel="stylesheet" href="css/index.css" />
+    <!-- <link rel="stylesheet" href="css/home.css" />
+    <link rel="stylesheet" href="css/footer.css" /> -->
+
+
   </head>
   <body>
     <header class="header">
@@ -715,9 +719,9 @@
 					<a href="index.html" class="footer__logo"><img src="images/logo-footer.svg" alt="" class="footer__logo-img"></a>
         </div>
         <div class="footer__bottom">
-          <p>© 2024 2WAYS</p>
-          <p>г.Хабаровск</p>
-          <a href="#">web-design: FIZIK_A</a>
+          <p>© 2024 2WAYS<span>г.Хабаровск </span></p> 
+          <!-- <p></p> --> 
+          <a href="#">web-design: ALEKSANDR_FIZIK</a>
         </div>
       </div>
     </footer>
