--- a/news.html
+++ b/news.html
@@ -13,8 +13,7 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/swiper-bundle.min.css" />
     <link rel="stylesheet" href="css/animate.min.css">
-    <link rel="stylesheet" href="css/index.css" />
-
+    <link rel="stylesheet" href="css/news.css" />
   </head>
   <body>
     <header class="header">
@@ -22,12 +21,6 @@
         <a href="index.html" class="logo">
           <img src="images/logo-svg.svg" alt="logo" class="logo-img" />
         </a>
-        <div class="menu-icon">
-          <span></span>
-          <span></span>
-          <span></span>
-        </div>
-
         <nav class="menu">
           <ul class="menu__list">
             <li class="menu__list-item">
@@ -73,7 +66,7 @@
           <div class="hero__image-2"></div>
           <div class="hero__spot-yellow"></div> -->
 
-          <h1 style="color:#fff; padding-top: 200px; font-family: Arial, Helvetica, sans-serif; font-size: 36px; margin: 0 auto; text-align: center; font-weight: 800;line-height: 1.3; letter-spacing:2px; text-transform: uppercase;">Страница <br />в разработке!</h1>
+          <h1 style="color:#fff; padding-top: 350px; font-family: Arial, Helvetica, sans-serif; font-size: 34px; margin: 0 auto; text-align: center;">Страница <br />в разработке!</h1>
           <!-- <h2 class="hero__subtitle animate__animated animate__fadeInUp animate__slower">
             АНГЛИЙСКОМУ И <br />
             ФРАНЦУЗСКОМУ ЯЗЫКАМ
