--- a/classes.html
+++ b/classes.html
@@ -400,7 +400,7 @@
               id="classes-english__tab-3"
             >
               <p class="classes-english__tab-vertical">экзамены</p>
-              <p class="classes-english__tab-age">12+</p>
+              <p class="classes-english__tab-age">9 кл.</p>
               <a href="#english__tab" class="classes-english__tab-arrow"></a>
 
               <h4 class="classes-english__tab-subtitle h4">
@@ -598,19 +598,29 @@
               class="classes-english__tab-box hidden"
               id="classes-english__tab-4"
             >
-              Сдать ЕГЭ по английскому на высокий балл и открыть для себя мир
-              новых возможностей с подготовительными занятиями в 2WAYS!
+              <p class="classes-english__tab-vertical">экзамены</p>
+              <p class="classes-english__tab-age">10-11 кл.</p>
+              <p class="classes-english__tab-subtitle h4">
+                Сдать ЕГЭ по английскому на высокий балл и открыть для себя мир
+                новых возможностей с подготовительными занятиями в <br />
+                <span>2WAYS!</span>
+              </p>
             </div>
             <div
               class="classes-english__tab-box hidden"
-              id="classes-english__tab-5"
-            >
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-              commodi voluptas incidunt aliquid laborum a modi autem animi nihil
-              corrupti. Vero molestias optio, ratione expedita libero quos ipsa!
-              Id nostrum nihil harum, odit dolore voluptatum possimus debitis
-              maiores voluptatem reiciendis alias exercitationem totam autem.
-              Cum, eligendi nam!
+              id="classes-english__tab-5" >
+              <h4 class="classes-english__tab-subtitle h4">
+                Лето - время для новых открытий!
+              </h4>
+              <p class="classes-english__flex_tab-description holidays">
+                <span>Наши летние занятия</span> - это не просто учёба, а
+                увлекательное путешествие в мир английского языка. Мы объединяем
+                приятное с полезным: отдых и изучение нового в период летних
+                каникул! Хотите узнать больше?
+              </p>
+
+              <p>Более подробная информация - в мае 2025 года.</p>
+              <p>Следите за обновлениями!</p>
             </div>
           </div>
         </div>
@@ -918,12 +928,18 @@
               class="classes-france__tab-box hidden"
               id="classes-france__tab-5"
             >
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae
-              commodi voluptas incidunt aliquid laborum a modi autem animi nihil
-              corrupti. Vero molestias optio, ratione expedita libero quos ipsa!
-              Id nostrum nihil harum, odit dolore voluptatum possimus debitis
-              maiores voluptatem reiciendis alias exercitationem totam autem.
-              Cum, eligendi nam!
+            <h4 class="classes-france__tab-subtitle h4">
+              Лето - время для новых открытий!
+            </h4>
+            <p class="classes-france__flex_tab-description holidays">
+              <span>Наши летние занятия</span> - это не просто учёба, а
+              увлекательное путешествие в мир английского языка. Мы объединяем
+              приятное с полезным: отдых и изучение нового в период летних
+              каникул! Хотите узнать больше?
+            </p>
+
+            <p>Более подробная информация - в мае 2025 года.</p>
+            <p>Следите за обновлениями!</p>
             </div>
           </div>
         </div>
