--- a/index.html
+++ b/index.html
@@ -630,6 +630,55 @@
         <a href="https://go.2gis.com/mb77i" class="reviews__btn btn ">оставить  отзыв</a>
       </section>
 
+      <section class="price" id="price" >
+        <div class="container price__container">
+          <h3 class="price__title h3" >стоимость услуг</h3>
+          <div>
+            
+          </div>
+          <table class="price__table">
+            <tr class="price__list">
+              <!-- <th></th> -->
+              <th class="price__name">Вид занятия</th>
+              <th class="price__item">Цена</th>
+              <th class="price__item">Количество часов</th>
+              <th class="price__descr">Формат</th>
+            </tr>
+            <tr class="price__row">
+              <td class="price__name">Индивидуальное</td>
+              <td class="price__item">1000 ₽</td>
+              <td class="price__item">1</td>
+              <td class="price__descr">Очное</td>
+            </tr>
+
+            <tr class="price__row">
+              <td class="price__name">Групповое</td>
+              <td class="price__item">800 ₽</td>
+              <td class="price__item">1</td>
+              <td class="price__descr">Очное</td>
+            </tr>
+            <tr class="price__row">
+              <td class="price__name">Индивидуальное</td>
+              <td class="price__item">1000 ₽</td>
+              <td class="price__item">1</td>
+              <td class="price__descr">Онлайн</td>
+            </tr>
+            <tr class="price__row">
+              <td class="price__name">Групповое</td>
+              <td class="price__item">800 ₽</td>
+              <td class="price__item">1</td>
+              <td class="price__descr">Онлайн</td>
+            </tr>
+
+          </table>
+
+
+          
+          <p class="price__rule-title"> * Приведите знакомого на 2 занятия в группе и получите скидку <span>50%</span> на 1 занятие!
+          </p>
+        </div>
+
+      </section>
 
       <section class="contacts" id="contacts">
         <div class="contacts__decor waves-decor"></div>
@@ -713,26 +762,27 @@
                 <a href="#reviews" class="footer-menu__link">Отзывы</a>
               </li>
 
-              <li class="footer-menu__item">
-                <a href="#contacts" class="footer-menu__link">Контакты</a>
-              </li>
             </ul>
             <ul class="footer-menu">
+
               <li class="footer-menu__item">
                 <a href="news.html" class="footer-menu__link">Новости</a>
               </li>
-              <li class="footer-menu__item">
+              <!-- <li class="footer-menu__item">
                 <a href="news.html" class="footer-menu__link">Акции</a>
+              </li> -->
+              <li class="footer-menu__item">
+                <a href="#price" class="footer-menu__link">Прайс</a>
               </li>
               <li class="footer-menu__item">
-                <a href="news.html" class="footer-menu__link">Прайс</a>
+                <a href="gallery.html" class="footer-menu__link">Галерея</a>
               </li>
               <li class="footer-menu__item">
-                <a href="news.html" class="footer-menu__link">Галерея</a>
+                <a href="#contacts" class="footer-menu__link">Контакты</a>
               </li>
-              <li class="footer-menu__item">
+              <!-- <li class="footer-menu__item">
                 <a href="news.html" class="footer-menu__link">Ресурсы</a>
-              </li>
+              </li> -->
             </ul>
           </nav>
 					<a href="index.html" class="footer__logo"><img src="images/logo-footer.svg" alt="" class="footer__logo-img"></a>
@@ -740,7 +790,7 @@
         <div class="footer__bottom">
           <p>© 2024 2WAYS<span>г.Хабаровск </span></p> 
           <!-- <p></p> --> 
-          <a href="#">web-design: ALEKSANDR_FIZIK</a>
+          <a href="#">web-dev: ALEKSANDR_FIZIK</a>
         </div>
       </div>
     </footer>
