--- a/gallery.html
+++ b/gallery.html
@@ -42,7 +42,9 @@
             <li class="menu__list-item">
               <a href="index.html#reviews" class="menu__list-link">Отзывы</a>
             </li>
-
+            <li class="menu__list-item">
+              <a href="news.html" class="menu__list-link">Новости</a>
+            </li>
             <li class="menu__list-item">
               <a href="index.html#contacts" class="menu__list-link">Контакты</a>
             </li>
@@ -64,11 +66,15 @@
       </div>
     </header>
     <main>
-      <div class="news-hero">
-        <div class="container hero-container">
+      <div class="gallery-hero">
+        <div class="container gallery-hero-container">
+          <!-- <div class="gallery-hero__image-1"></div>
+          <div class="gallery-hero__spot-blue"></div>
+          <div class="gallery-hero__image-2"></div>
+          <div class="gallery-hero__spot-yellow"></div> -->
 
-          <h1 style="color:#3a3a3a; padding-top: 200px; font-family: Arial, Helvetica, sans-serif; font-size: 36px; margin: 0 auto; text-align: center; font-weight: 800;line-height: 1.3; letter-spacing:2px; text-transform: uppercase;">Страница <br />в разработке!</h1>
-          <h4 style="margin-top: 30px; font-size: 24px; line-height: 1.3; color: #fa9250;" class="h4">следите за нашими новостями в социальных сетях <br>по ссылкам в разделе "контакты"</h4>
+          <h1 style="color:#fff; padding-top: 200px; font-family: Arial, Helvetica, sans-serif; font-size: 36px; margin: 0 auto; text-align: center; font-weight: 800;line-height: 1.3; letter-spacing:2px; text-transform: uppercase; padding-top: 380px;">Страница <br />в разработке!</h1>
+          <h4 style="margin-top: 30px; font-size: 24px; line-height: 1.3; color: #ffe57b;" class="h4"></h4>
 
         
       </div>
@@ -91,28 +97,23 @@
                 <a href="index.html#reviews" class="footer-menu__link">Отзывы</a>
               </li>
 
-
             </ul>
             <ul class="footer-menu">
-              <!-- <li class="footer-menu__item">
-                <a href="#news" class="footer-menu__link">Новости</a>
-              </li> -->
+
+              <li class="footer-menu__item">
+                <a href="news.html" class="footer-menu__link">Новости</a>
+              </li>
               <!-- <li class="footer-menu__item">
                 <a href="#" class="footer-menu__link">Акции</a>
               </li> -->
-
               <li class="footer-menu__item">
-                <a href="index.html#price" class="footer-menu__link">Прайс</a>
-              </li>
-              <li class="footer-menu__item">
-                <a href="gallery.html" class="footer-menu__link">Галерея</a>
+                <a href="#" class="footer-menu__link">Прайс</a>
               </li>
               <li class="footer-menu__item">
                 <a href="index.html#contacts" class="footer-menu__link">Контакты</a>
               </li>
-              <!-- <li class="footer-menu__item">
-                <a href="#" class="footer-menu__link">Ресурсы</a>
-              </li> -->
+              <li class="footer-menu__item">
+
             </ul>
           </nav>
           
