--- a/classes.html
+++ b/classes.html
@@ -37,18 +37,19 @@
         <nav class="menu classes-menu">
           <ul class="menu__list">
             <li class="menu__list-item">
-              <a href="index.html" class="menu__list-link">На главную</a>
+              <a href="index.html#teachers" class="menu__list-link">Преподаватели</a>
             </li>
-            <li class="menu__list-item">
-              <a href="#courses" class="menu__list-link">Занятия</a>
+
+            <li class="menu__list-item" >
+              <a href="#" class="menu__list-link menu__list-submenu" >Занятия</a>
               <ul class="submenu">
                 <li class="menu__list-item">
-                  <a href="#english__tab" class="menu__list-link"
+                  <a href="classes.html#english__tab" class="menu__list-link"
                     >английский язык</a
                   >
                 </li>
                 <li class="menu__list-item">
-                  <a href="#france__tab" class="menu__list-link"
+                  <a href="classes.html#france__tab" class="menu__list-link"
                     >французский язык</a
                   >
                 </li>
@@ -61,6 +62,9 @@
 
             <li class="menu__list-item">
               <a href="#" class="menu__list-link">Отзывы</a>
+            </li>
+            <li class="menu__list-item">
+              <a href="index.html#contacts" class="menu__list-link">Контакты</a>
             </li>
 
             <!-- <li class="menu__list-item">
