--- a/gallery.html
+++ b/gallery.html
@@ -72,7 +72,7 @@
           <div class="gallery-hero__spot-blue"></div>
           <div class="gallery-hero__image-2"></div>
           <div class="gallery-hero__spot-yellow"></div> -->
-          <h1 class="gallery-hero__title">Галлерея</h1>
+          <h1 class="gallery-hero__title">Галерея</h1>
           <h2 style="color:#fff;  font-family: Arial, Helvetica, sans-serif; font-size: 36px; margin: 0 auto; text-align: center; font-weight: 800;line-height: 1.3; letter-spacing:2px; text-transform: uppercase; padding-top: 90px;">Страница <br />в разработке!</h2>
           <h4 style="margin-top: 30px; font-size: 24px; line-height: 1.3; color: #ffe57b;" class="h4"></h4>
 
