--- a/index.html
+++ b/index.html
@@ -692,7 +692,7 @@
             <div class="contacts__address">
               <p>адрес:</p>
               <p>ул.Ленинградская,44 <br>
-                4-й этаж каб. 401-Б</p>
+                4-й этаж каб. 401, 401-Б</p>
             </div>
             <ul class="contacts__sicial-list example-2">
               <li class="social__item icon-content"><a       aria-label="vk"
