--- a/gallery.html
+++ b/gallery.html
@@ -91,7 +91,7 @@
                 <a href="index.html#teachers" class="footer-menu__link">Преподаватели</a>
               </li>
               <li class="footer-menu__item">
-                <a href="index.html#courses" class="footer-menu__link">Курсы</a>
+                <a href="index.html#courses" class="footer-menu__link">Занятия</a>
               </li>
               <li class="footer-menu__item">
                 <a href="index.html#reviews" class="footer-menu__link">Отзывы</a>
@@ -103,11 +103,9 @@
               <li class="footer-menu__item">
                 <a href="news.html" class="footer-menu__link">Новости</a>
               </li>
-              <!-- <li class="footer-menu__item">
-                <a href="#" class="footer-menu__link">Акции</a>
-              </li> -->
+
               <li class="footer-menu__item">
-                <a href="#" class="footer-menu__link">Прайс</a>
+                <a href="index.html#price" class="footer-menu__link">Прайс</a>
               </li>
               <li class="footer-menu__item">
                 <a href="index.html#contacts" class="footer-menu__link">Контакты</a>
