--- a/classes.html
+++ b/classes.html
@@ -1150,7 +1150,7 @@
                 >
               </li>
               <li class="footer-menu__item">
-                <a href="#reviews" class="footer-menu__link">Отзывы</a>
+                <a href="index.html#reviews" class="footer-menu__link">Отзывы</a>
               </li>
 
 
@@ -1163,10 +1163,10 @@
                 <a href="index.html#price" class="footer-menu__link">Прайс</a>
               </li>
               <li class="footer-menu__item">
-                <a href="news.html" class="footer-menu__link">Галерея</a>
+                <a href="gallery.html" class="footer-menu__link">Галерея</a>
               </li>
               <li class="footer-menu__item">
-                <a href="#contacts" class="footer-menu__link">Контакты</a>
+                <a href="index.html#contacts" class="footer-menu__link">Контакты</a>
               </li>
 
             </ul>
