--- a/gallery.html
+++ b/gallery.html
@@ -67,7 +67,7 @@
     </header>
     <main>
       <div class="gallery-hero">
-        <div class="container gallery-hero-container">
+        <div class="container gallery-container">
           <!-- <div class="gallery-hero__image-1"></div>
           <div class="gallery-hero__spot-blue"></div>
           <div class="gallery-hero__image-2"></div>
