--- a/news.html
+++ b/news.html
@@ -68,7 +68,7 @@
         <div class="container hero-container">
           <h1 class="news-hero__title">Новости</h1>
           <h2 style="color:#3a3a3a; padding-top: 50px; font-family: Arial, Helvetica, sans-serif; font-size: 36px; margin: 0 auto; text-align: center; font-weight: 800;line-height: 1.3; letter-spacing:2px; text-transform: uppercase;">Страница <br />в разработке!</h2>
-          <h4 style="margin-top: 30px; font-size: 24px; line-height: 1.3; color: #fa9250;" class="h4">следите за нашими новостями в социальных сетях <br>по ссылкам в разделе "контакты"</h4>
+          <h4 style="margin-top: 30px; font-size: 24px; line-height: 1.3; color: #fff; text-shadow: 0 4px 11px #0007;" class="h4">следите за нашими новостями в социальных сетях <br>по ссылкам в разделе "контакты"</h4>
 
         
       </div>
